# django-basemodels-rest

./: .gitignore  README.md  pyproject.toml  pytest.ini
src/django_basemodels_rest/: __init__.py  serializers.py
tests/: conftest.py  test_serializers.py
